Closed Bug 344980 Opened 18 years ago Closed 18 years ago

nsPrompt::PromptUsernameAndPassword does sometimes not set retval

Categories

(Core Graveyard :: Embedding: APIs, defect)

defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: Biesinger, Assigned: Biesinger)

Details

Attachments

(1 file)

http://lxr.mozilla.org/seamonkey/source/netwerk/base/public/nsIAuthPrompt.idl

The boolean is the return value.

http://lxr.mozilla.org/seamonkey/source/embedding/components/windowwatcher/src/nsPrompt.cpp#375

But the code just returns NS_OK without touching the boolean if DefaultEnabled() returns false.
Attached patch patchSplinter Review
Assignee: nobody → cbiesinger
Status: NEW → ASSIGNED
Attachment #229606 - Flags: superreview?(bzbarsky)
Attachment #229606 - Flags: review?(bzbarsky)
Comment on attachment 229606 [details] [diff] [review]
patch

>Index: embedding/components/windowwatcher/src/nsPrompt.cpp

>+    // Default to cancel. answer and checkValue are inout parameters, so we
>+    // don't have to set it.

"set them"

r+sr=bzbarsky with that.
Attachment #229606 - Flags: superreview?(bzbarsky)
Attachment #229606 - Flags: superreview+
Attachment #229606 - Flags: review?(bzbarsky)
Attachment #229606 - Flags: review+
checked in with that change
Checking in embedding/components/windowwatcher/src/nsPrompt.cpp;
/cvsroot/mozilla/embedding/components/windowwatcher/src/nsPrompt.cpp,v  <--  nsPrompt.cpp
new revision: 1.24; previous revision: 1.23
done
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: