Bug 344980 make nsPrompt functions always set their out parameters/retvals r+sr=bz